--- a/package.json
+++ b/package.json
@@ -60,15 +60,15 @@
   },
   "dependencies": {
     "@emotion/css": "11.10.6",
-    "@grafana/data": "10.0.3",
-    "@grafana/runtime": "10.0.3",
-    "@grafana/ui": "10.0.3",
-    "@grafana/schema": "10.0.3",
-    "@grafana/scenes": "^1.28.0",
+    "@grafana/data": "^10.4.0",
+    "@grafana/runtime": "^10.4.0",
+    "@grafana/scenes": "^4.29.0",
+    "@grafana/schema": "^10.4.0",
+    "@grafana/ui": "^10.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "5.3.3",
-    "rxjs": "7.8.0",
+    "react-router-dom": "^5.2.0",
+    "rxjs": "7.8.1",
     "tslib": "2.5.3"
   },
   "packageManager": "npm@10.2.4"
